--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="img.jpeg" alt="london web design">
-        <img src="img.jpeg" alt="london web design">
-        <img src="img.jpeg" alt="london web design">
-        <img src="img.jpeg" alt="london web design">
+        <img src="buddha.jpeg" alt="london web design">
+        <img src="buddha.jpeg" alt="london web design">
+        <img src="buddha.jpeg" alt="london web design">
+        <img src="buddha.jpeg" alt="london web design">
     </div>
 </body>
 </html>
