image change and bg color removed on container

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 </head>
 <body>
     <div class="container">
-        <img src="buddha.jpeg" alt="london web design">
-        <img src="buddha.jpeg" alt="london web design">
-        <img src="buddha.jpeg" alt="london web design">
-        <img src="buddha.jpeg" alt="london web design">
+        <img src="btc.png" alt="london web design">
+        <img src="btc.png" alt="london web design">
+        <img src="btc.png" alt="london web design">
+        <img src="btc.png" alt="london web design">
+        <img src="btc.png" alt="london web design">
     </div>
 </body>
 </html>
